made button + fixed some spacing

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -64,7 +64,7 @@
     --color-github: #333;
     --color-gitlab: #fc6d26;
     --color-bitbucket: #0052cc;
-    
+
     --color-border: var(--color-dark-secondary);
     --web-bg: var(--color-white);
     --hero-bg: var(--color-black);
@@ -82,10 +82,24 @@
     --p-font-size: 1.125rem;
 }
 
+.hide-non-mobile {
+    display: none;
+}
+
 @media screen and (max-width: 768px) {
     :root {
         --padding-big: 1.5rem;
         --header-height: 6rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .hide-mobile {
+        display: none;
+    }
+
+    .hide-non-mobile {
+        display: block;
     }
 }
 
@@ -365,4 +379,114 @@ body,
 /* FOOTER */
 footer {
     text-transform: uppercase;
+}
+
+/* BADGES */
+
+.badge {
+    display: inline-block;
+    border-radius: 1rem;
+    background-color: var(--badge-bg, var(--color-light-secondary));
+    color: var(--badge-fg, var(--color-black));
+    padding: 0.5rem 1rem;
+    margin: 0.1rem;
+    text-transform: capitalize;
+}
+
+.badge--clickable:hover {
+    background-color: var(--badge-bg-hover,
+            var(--color-light-triary));
+    color: var(--badge-fg-hover, var(--color-black));
+}
+
+.badge--active {
+    --badge-bg: var(--color-primary-2);
+    --badge-fg: var(--color-white);
+}
+
+.badge--black {
+    --badge-bg: var(--color-black);
+    --badge-fg: var(--color-white);
+}
+
+.badge--clickable.badge--active:hover {
+    opacity: 0.8;
+    background-color: var(--badge-bg, var(--color-light-triary));
+    color: var(--badge-fg, var(--color-black));
+}
+
+.badge--active[data-color="Astro"] {
+    --badge-bg: var(--color-astro);
+    --badge-fg: var(--color-white);
+}
+
+.badge--active[data-color="Typescript"] {
+    --badge-bg: var(--color-typescript);
+    --badge-fg: var(--color-white);
+}
+
+.badge--active[data-color="Tailwind"] {
+    --badge-bg: var(--color-tailwind);
+    --badge-fg: var(--color-white);
+}
+
+.badge--active[data-color="SASS"] {
+    --badge-bg: var(--color-sass);
+    --badge-fg: var(--color-white);
+}
+
+.badge--active[data-color="Angular"] {
+    --badge-bg: var(--color-angular);
+    --badge-fg: var(--color-white);
+}
+
+.badge--active[data-color="Gmail"] {
+    --badge-bg: var(--color-gmail);
+    --badge-fg: var(--color-white);
+}
+
+.badge--active[data-color="LinkedIn"] {
+    --badge-bg: var(--color-linkedin);
+    --badge-fg: var(--color-white);
+}
+
+.badge--active[data-color="Javascript"] {
+    --badge-bg: var(--color-javascript);
+    --badge-fg: var(--color-black);
+}
+
+.badge--active[data-color="GitHub"] {
+    --badge-bg: var(--color-black);
+    --badge-fg: var(--color-white);
+}
+
+.badge--active[data-color="HTML"] {
+    --badge-bg: var(--color-html);
+    --badge-fg: var(--color-white);
+}
+
+.badge--active[data-color="CSS"] {
+    --badge-bg: var(--color-css);
+    --badge-fg: var(--color-white);
+}
+
+.badge--active[data-color="Vue"] {
+    --badge-bg: var(--color-vue);
+    --badge-fg: var(--color-white);
+}
+
+.badge--active[data-color="Nuxt"] {
+    --badge-bg: var(--color-nuxtjs);
+    --badge-fg: var(--color-white);
+}
+
+.badge--active[data-color="SolidJS"] {
+    --badge-bg: var(--color-solidjs);
+    --badge-fg: var(--color-white);
+}
+
+.badge--active[data-color="Websockets"],
+.badge--active[data-color="SEO"] {
+    --badge-bg: var(--color-gray);
+    --badge-fg: var(--color-white);
 }
